<resources>
    <string name="app_name">Mad Application</string>
    <string name="Header">Brave Apparels</string>
    <string name="BTN3">REGISTER</string>

    <string name="Name"></string>
    <string name="Email"></string>
    <string name="Address"></string>
    <string name="Password"></string>
    <string name="Telephone"></string>

    <string name="Member">Already a Member? Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="NewHereRegister">New Here? Register</string>
    <string name="CName">Mark Anton</string>
    <string name="CEmail">markanton12@gmail.com</string>
    <string name="CTelNumber">+94715682121</string>
    <string name="CAddress">No 40 A Malwaththa Marapana Ratnapura  70001</string>
    <string name="Payment">Add payment method</string>
    <string name="SignOut">Sign Out</string>
    <string name="EditName">Edit Name</string>
    <string name="EditEmail">Edit Email</string>
    <string name="EditNumber">Edit Number</string>
    <string name="BTNSave">Update</string>
    <string name="BTNCancel">Delete</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="StreetName">Street name</string>
    <string name="HomeNo">No</string>
    <string name="Street">Street</string>
    <string name="PostalCode">Postal code</string>
    <string name="EditPassword">Edit Password</string>
    <string name="Feedbacks">"Feedbacks "</string>
    <string name="Description">“We all need people who will give us  feedback”</string>
    <string name="Description2">Give us your feedback to improve our service !</string>
    <string name="AddaFeedback">Add a feedback</string>
    <string name="Comments">My Comments</string>
    <string name="Text">Give us your feedback here !</string>
    <string name="CFeedback">Feedback</string>
    <string name="Feedback">Feedback</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="MyComments">My Comments</string>
    <string name="AlreadyMember">AlreadyMember</string>
    <string name="feedback">Type here</string>
    <string name="UserName">name</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtnInSignup">Already a user? Login</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="welcome_back">Login!</string>
    <string name="signupBtnInSignIn">Are you new here? Register</string>
    <string name="user">User</string>

    <string name="_0">0</string>

</resources>