<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/android_small"
        tools:context=".MainActivity">


        <EditText
            android:id="@+id/eTNameUpdate"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_marginTop="304dp"
            android:background="@drawable/rectangle_26"
            android:gravity="left"
            android:text="@string/EditName"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eTNumberUpdate"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rectangle_26"
            android:gravity="left"
            android:text="@string/EditNumber"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTEmailUpdate" />

        <EditText
            android:id="@+id/eTPasswordUpdate"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rectangle_26"
            android:gravity="left"
            android:text="@string/EditPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTNumberUpdate" />

        <EditText
            android:id="@+id/eTEmailUpdate"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rectangle_26"
            android:gravity="left"
            android:text="@string/EditEmail"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTNameUpdate" />

        <EditText
            android:id="@+id/eTAddressUpdate"
            android:layout_width="204dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rectangle_26"
            android:gravity="left"
            android:text="@string/DeliveryAddress"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTPasswordUpdate" />


        <Button
            android:id="@+id/updatebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="72dp"
            android:text="@string/BTNSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.674"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTAddressUpdate"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="182dp"
            android:layout_height="155dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.998"
            app:srcCompat="@drawable/m" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>